--- a/index.html
+++ b/index.html
@@ -98,10 +98,24 @@
       <h2>27A6</h2>
     </div>
 
-    <!-- Lokasi 3 (opsional) -->
+    <!-- Lokasi 3 -->
     <div class="card" onclick="goToLocation('26A2')">
       <h2>26A2</h2>
     </div>
+
+        <!-- Lokasi 4 -->
+    <div class="card" onclick="goToLocation('26A3')">
+      <h2>26A3</h2>
+
+          <!-- Lokasi 5 -->
+    <div class="card" onclick="goToLocation('26A4')">
+      <h2>26A4</h2>
+    </div>
+
+      
+    </div>
+
+    
   </div>
 
   <!-- FOOTER -->
