--- a/detail.html
+++ b/detail.html
@@ -25,7 +25,7 @@
 
       <table class="detail-table">
         <tbody id="detail-body">
-          <!-- script.js akan mengisi -->
+          <!-- script.js akan mengisi otomatis -->
         </tbody>
       </table>
 
