--- a/index.html
+++ b/index.html
@@ -86,35 +86,41 @@
     <h1>Daftar Lokasi Laboratorium</h1>
   </header>
 
-  <!-- GRID LOKASI -->
-  <div class="grid">
-    <!-- Lokasi 1 -->
-    <div class="card" onclick="goToLocation('22A3')">
-      <h2>22A3</h2>
-    </div>
-
-    <!-- Lokasi 2 -->
-    <div class="card" onclick="goToLocation('27A6')">
-      <h2>27A6</h2>
-    </div>
-
-    <!-- Lokasi 3 -->
-    <div class="card" onclick="goToLocation('26A2')">
-      <h2>26A2</h2>
-    </div>
-
-        <!-- Lokasi 4 -->
-    <div class="card" onclick="goToLocation('26A3')">
-      <h2>26A3</h2>
-    </div>
-
-      <!-- Lokasi 5 -->
-    <div class="card" onclick="goToLocation('26A4')">
-      <h2>26A4</h2>
-    </div>
-
-    
+<!-- GRID LOKASI -->
+<div class="grid">
+  
+  <div class="card" onclick="goToLocation('22A3')">
+    <h2>22A3</h2>
+    <p class="subtitle">National Research Center</p>
+    <p class="count" id="count-22A3">Total alat: ...</p>
   </div>
+
+  <div class="card" onclick="goToLocation('27A6')">
+    <h2>27A6</h2>
+    <p class="subtitle">Nusa Dua</p>
+    <p class="count" id="count-27A6">Total alat: ...</p>
+  </div>
+
+  <div class="card" onclick="goToLocation('26A2')">
+    <h2>26A2</h2>
+    <p class="subtitle">Kediri Bangsal</p>
+    <p class="count" id="count-26A2">Total alat: ...</p>
+  </div>
+
+  <div class="card" onclick="goToLocation('26A3')">
+    <h2>26A3</h2>
+    <p class="subtitle">Malang Blimbing</p>
+    <p class="count" id="count-26A3">Total alat: ...</p>
+  </div>
+
+  <div class="card" onclick="goToLocation('26A4')">
+    <h2>26A4</h2>
+    <p class="subtitle">Surabaya Rungkut</p>
+    <p class="count" id="count-26A4">Total alat: ...</p>
+  </div>
+
+</div>
+
 
   <!-- FOOTER -->
   <footer>
