--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
   <!-- GRID LOKASI -->
   <div class="grid">
-    
+
     <div class="card" onclick="goToLocation('22A3')">
       <h2>22A3</h2>
       <p class="subtitle">National Research Center</p>
@@ -143,13 +143,17 @@
 
   <!-- SCRIPT TOTAL ALAT & NAVIGASI -->
   <script>
+
+    /* -----------------------------
+       NAVIGASI KE list.html
+    ------------------------------*/
     function goToLocation(location) {
       window.location.href = "list.html?location=" + location;
     }
 
-    /* ------------------------------------------
-       LINK GOOGLE SHEETS (SAMA DENGAN list.html)
-    -------------------------------------------*/
+    /* -----------------------------
+       LINK GOOGLE SHEETS
+    ------------------------------*/
     const SHEETS = {
       "22A3": "https://docs.google.com/spreadsheets/d/e/2PACX-1vQXfYx0A9EbttwdEODklcJe0pY3TGftGwwiqvqQswVczPXNPG3CS3Am7dYNXQVa_XSoJX3Pnd_B3AQI/pub?gid=0&single=true&output=csv",
       "27A6": "https://docs.google.com/spreadsheets/d/e/2PACX-1vQXfYx0A9EbttwdEODklcJe0pY3TGftGwwiqvqQswVczPXNPG3CS3Am7dYNXQVa_XSoJX3Pnd_B3AQI/pub?gid=143986787&single=true&output=csv",
@@ -158,9 +162,9 @@
       "26A4": "https://docs.google.com/spreadsheets/d/e/2PACX-1vQXfYx0A9EbttwdEODklcJe0pY3TGftGwwiqvqQswVczPXNPG3CS3Am7dYNXQVa_XSoJX3Pnd_B3AQI/pub?gid=756843741&single=true&output=csv"
     };
 
-    /* ------------------------------------------
-       FUNGSI DETEKSI KOLOM SERIAL
-    -------------------------------------------*/
+    /* ---------------------------------
+       DETEKSI KOLOM SERIAL / SN / NOMOR
+    ----------------------------------*/
     function findSerialColumn(row) {
       for (let key in row) {
         if (!key) continue;
@@ -171,35 +175,41 @@
       return null;
     }
 
-    /* ------------------------------------------
+    /* ---------------------------------
        HITUNG TOTAL ALAT PER LOKASI
-    -------------------------------------------*/
+    ----------------------------------*/
     Object.keys(SHEETS).forEach(loc => {
 
       Papa.parse(SHEETS[loc], {
         download: true,
         header: true,
         skipEmptyLines: true,
-        complete: function(results) {
 
+        complete: function(results) {
           const data = results.data;
 
-          if (data.length === 0) {
+          if (!data || data.length === 0) {
             document.getElementById("count-" + loc).textContent = "Total alat: 0";
             return;
           }
 
           const serialCol = findSerialColumn(data[0]);
-          let total = 0;
+          if (!serialCol) {
+            document.getElementById("count-" + loc).textContent = "Total alat: ?";
+            return;
+          }
 
-          data.forEach(row => {
-            if (row[serialCol] && row[serialCol].trim() !== "") {
-              total++;
-            }
-          });
+          const total = data.filter(row =>
+            row[serialCol] && row[serialCol].trim() !== ""
+          ).length;
 
           document.getElementById("count-" + loc).textContent =
             "Total alat: " + total;
+        },
+
+        error: function() {
+          document.getElementById("count-" + loc).textContent =
+            "Total alat: (error)";
         }
       });
 
