--- a/index.html
+++ b/index.html
@@ -103,31 +103,31 @@
 
     <div class="card" onclick="goToLocation('22A3')">
       <h2>22A3</h2>
-      <p class="subtitle">National Research Center</p>
+      <p class="subtitle location-name">National Research Center</p>
       <p class="count" id="count-22A3">Total alat: ...</p>
     </div>
 
     <div class="card" onclick="goToLocation('27A6')">
       <h2>27A6</h2>
-      <p class="subtitle">Nusa Dua</p>
+      <p class="subtitle location-name">Nusa Dua</p>
       <p class="count" id="count-27A6">Total alat: ...</p>
     </div>
 
     <div class="card" onclick="goToLocation('26A2')">
       <h2>26A2</h2>
-      <p class="subtitle">Kediri Bangsal</p>
+      <p class="subtitle location-name">Kediri Bangsal</p>
       <p class="count" id="count-26A2">Total alat: ...</p>
     </div>
 
     <div class="card" onclick="goToLocation('26A3')">
       <h2>26A3</h2>
-      <p class="subtitle">Malang Blimbing</p>
+      <p class="subtitle location-name">Malang Blimbing</p>
       <p class="count" id="count-26A3">Total alat: ...</p>
     </div>
 
     <div class="card" onclick="goToLocation('26A4')">
       <h2>26A4</h2>
-      <p class="subtitle">Surabaya Rungkut</p>
+      <p class="subtitle location-name">Surabaya Rungkut</p>
       <p class="count" id="count-26A4">Total alat: ...</p>
     </div>
 
