--- a/detail.html
+++ b/detail.html
@@ -13,6 +13,8 @@
 
   <header>
     <a href="index.html" class="home-btn">← Kembali</a>
+
+    <div class="header-center">
     <img src="https://raw.githack.com/nurfaputra22/virtudigilab_equipment_web/main/logo_virtu.png" class="logo" />
     <h1>Detail Alat</h1>
   </header>
