--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
          alt="Virtu DigiLab Logo"
          class="logo">
 
-    <h1>Daftar Lokasi Laboratorium</h1>
+    <h1 class="page-title">Daftar Lokasi Laboratorium</h1>
   </header>
 
   <!-- GRID LOKASI -->
