--- a/detail.html
+++ b/detail.html
@@ -11,14 +11,25 @@
 
 <body>
 
+  <!-- ================= HEADER ================= -->
   <header>
+
+    <!-- Tombol kembali -->
     <a href="index.html" class="home-btn">← Kembali</a>
 
-    <div class="header-center">
-    <img src="https://raw.githack.com/nurfaputra22/virtudigilab_equipment_web/main/logo_virtu.png" class="logo" />
-    <h1>Detail Alat</h1>
+    <!-- Logo kiri -->
+    <img
+      src="https://raw.githack.com/nurfaputra22/virtudigilab_equipment_web/main/logo_virtu.png"
+      class="logo"
+      alt="Logo Virtu DigiLab"
+    />
+
+    <!-- Judul center (di-style pakai position absolute dari CSS) -->
+    <h1 class="page-title">Detail Alat</h1>
+
   </header>
 
+  <!-- ================= MAIN ================= -->
   <main>
 
     <h2 class="section-title">Informasi Alat</h2>
@@ -46,8 +57,9 @@
 
   </main>
 
+  <!-- ================= FOOTER ================= -->
   <footer>
-    &copy; 2025 Virtu DigiLab
+    &copy; 2025 Virtu DigiLab — Sistem Inventori Alat Laboratorium
   </footer>
 
   <script src="script.js"></script>
