--- a/index.html
+++ b/index.html
@@ -16,26 +16,33 @@
       padding: 0;
     }
 
+    /* HEADER */
     header {
       display: flex;
       align-items: center;
-      gap: 15px;
       padding: 20px;
       background: white;
       box-shadow: 0 2px 8px rgba(0,0,0,0.05);
       margin-bottom: 20px;
+      position: relative;
     }
 
     .logo {
       height: 55px;
+      margin-right: 15px;
     }
 
-    header h1 {
+    /* Judul ditegah tanpa memindah logo */
+    .page-title {
+      flex: 1;                 /* mengambil ruang kosong */
+      text-align: center;      /* membuat teks ke tengah */
       margin: 0;
       font-size: 26px;
       color: #111827;
+      font-weight: 600;
     }
 
+    /* GRID */
     .grid {
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
@@ -43,6 +50,7 @@
       padding: 20px;
     }
 
+    /* CARD */
     .card {
       background: white;
       border-radius: 14px;
@@ -77,6 +85,7 @@
       color: #111827;
     }
 
+    /* FOOTER */
     footer {
       text-align: center;
       padding: 20px;
@@ -144,16 +153,12 @@
   <!-- SCRIPT TOTAL ALAT & NAVIGASI -->
   <script>
 
-    /* -----------------------------
-       NAVIGASI KE list.html
-    ------------------------------*/
+    /* NAVIGASI KE list.html */
     function goToLocation(location) {
       window.location.href = "list.html?location=" + location;
     }
 
-    /* -----------------------------
-       LINK GOOGLE SHEETS
-    ------------------------------*/
+    /* LINK GOOGLE SHEETS */
     const SHEETS = {
       "22A3": "https://docs.google.com/spreadsheets/d/e/2PACX-1vQXfYx0A9EbttwdEODklcJe0pY3TGftGwwiqvqQswVczPXNPG3CS3Am7dYNXQVa_XSoJX3Pnd_B3AQI/pub?gid=0&single=true&output=csv",
       "27A6": "https://docs.google.com/spreadsheets/d/e/2PACX-1vQXfYx0A9EbttwdEODklcJe0pY3TGftGwwiqvqQswVczPXNPG3CS3Am7dYNXQVa_XSoJX3Pnd_B3AQI/pub?gid=143986787&single=true&output=csv",
@@ -162,9 +167,7 @@
       "26A4": "https://docs.google.com/spreadsheets/d/e/2PACX-1vQXfYx0A9EbttwdEODklcJe0pY3TGftGwwiqvqQswVczPXNPG3CS3Am7dYNXQVa_XSoJX3Pnd_B3AQI/pub?gid=756843741&single=true&output=csv"
     };
 
-    /* ---------------------------------
-       DETEKSI KOLOM SERIAL / SN / NOMOR
-    ----------------------------------*/
+    /* DETEKSI KOLOM SERIAL */
     function findSerialColumn(row) {
       for (let key in row) {
         if (!key) continue;
@@ -175,9 +178,7 @@
       return null;
     }
 
-    /* ---------------------------------
-       HITUNG TOTAL ALAT PER LOKASI
-    ----------------------------------*/
+    /* HITUNG TOTAL ALAT */
     Object.keys(SHEETS).forEach(loc => {
 
       Papa.parse(SHEETS[loc], {
